--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,8 @@ body {
   background-repeat: repeat;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .blog-post {
   background-color: white;
