--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,8 @@ body {
 .public-body, .comment-wrapper {
   white-space: pre-line;
 }
-.posts-secure-list .public-body {
+.posts-secure-list .public-body, 
+.blog-posts .public-body {
   display: -webkit-box;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
@@ -202,6 +203,24 @@ button {
   font-family: var(--cursive-font);
   font-size: 20px;
   transition: all 0.5s ease-out;
+}
+.github-link {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.github {
+  max-width: 40px;
+}
+.github-name {
+  font-size: 20px;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
 /* BLOG POST PG */
 .blog-post-pg {
