--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ body {
   height: 100vh;
   margin: 0;
   background-image: var(--main-background);
-
 }
 #root {
   height: 100%;
@@ -234,12 +233,33 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: var(--main-background);  
-  height: 100%;
+  min-height: 100vh;
+  background-color: var(--purple);
+}
+.blog-post-and-menu {
+  display: flex;
+}
+.blog-post-menu {
+  margin-top: 15px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.blog-post-menu img {
+  max-height: 35px;
+}
+.blog-post-button {
+  background-color: var(--purple);
+  border: none;
+  border-radius: 20px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .create-comment {
   font-family: var(--cursive-font);
-  background-color: var(--purple);
+  background-color: var(--light-purple);
   border: none;
   width: 300px;
   display: flex;
@@ -249,10 +269,18 @@ a {
   min-height: 280px;
   border-radius: var(--border-radius);
   margin-top: 15px;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 .create-comment form {
   max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.create-comment form label {
+  color: var(--purple);
+  font-size: 23px;
+  font-weight: 900;
 }
 .add-name {
   margin-top: 15px;
@@ -288,10 +316,10 @@ textarea {
   justify-content: center;
 }
 .submit-comment-container button {
-  background-color: var(--light-purple);
+  background-color: var(--purple);
   width: 100px;
   height: 40px;
-  color: var(--purple);
+  color: white;
   border: none;
   border-radius: 20px;
   font-weight: 900;
