--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 }
 /* BLOG POSTS */
 .blog-posts {
-  min-width: 83%;
+  width: 80vw;
   background-size: contain;
   background-repeat: repeat;
 
@@ -47,6 +47,7 @@ body {
   border-radius: 20px;
   border: 1px solid var(--purple);
   max-width: 700px;
+  width: 50vw;
   margin-top: 15px;
   color: var(--purple);
   padding: 15px;
@@ -82,6 +83,7 @@ body {
 }
 /* ASIDE */
 .aside {
+  width: 20vw;
   min-width: 250px;
   background-color: var(--purple);
   color: white;
@@ -441,7 +443,7 @@ textarea {
   width: 200px;
   padding: 7px;
 }
-@media (max-width: 620px) {
+@media (max-width: 750px) {
   .blog {
     display: flex;
     flex-direction: column;
