--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ body {
   font-family: "Handlee", cursive;
   height: 100vh;
   margin: 0;
+  max-height: 100vh;
 }
 body::before {
   content: "";
@@ -70,21 +71,23 @@ body::before {
 }
 /* BLOG POSTS */
 .blog-posts {
-  width: 80vw;
+  width: 65vw;
   background-size: contain;
   background-repeat: repeat;
+  margin-top: 120px;
+  margin-left: 20px;
+  margin-right: 20px;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  overflow: scroll;
 }
 .blog-post {
   background-color: white;
   border-radius: 20px;
   border: 1px solid var(--purple);
-  max-width: 700px;
-  width: 50vw;
-  margin: 15px;
+  max-width: 275px;
   color: var(--purple);
   padding: 15px;
 }
@@ -98,22 +101,33 @@ body::before {
   background-color: var(--light-purple);
   height: max-content;
   max-height: 60%;
-  width: 10%;
+  width: 100%;
   border-radius: var(--border-radius);
   padding: 10px;
   overflow: scroll;
+  margin-top: 120px;
 }
 .aside-portal {
   display: flex;
 }
+.portal-wrapper {
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.2) translate(var(--x, -50%), var(--y, -50%)) rotate(0deg);
+    transition: transform 0.3s ease-in-out;
+  }
+  position: absolute;
+  top: 80%;
+  left: 90%;
+}
 .portal {
   position: absolute;
   top: 80%;
-  left: 86%;
+  left: 90%;
   transform: translate(var(--x, -50%), var(--y, -50%)) rotate(0deg);
   font-size: 10vmin;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.2em;
+  height: 1.2em;
   border-radius: 90% 95% 85% 105%;
   background: #0f0;
   mix-blend-mode: screen;
@@ -269,6 +283,7 @@ body::before {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  overflow: scroll;
 }
 .archive-button {
   margin: none;
