--- a/src/App.scss
+++ b/src/App.scss
@@ -102,7 +102,7 @@ body::before {
   background-color: var(--light-purple);
   height: max-content;
   max-height: 60%;
-  width: 50%;
+  width: 30%;
   border-radius: var(--border-radius);
   padding: 10px;
   overflow: scroll;
@@ -112,7 +112,7 @@ body::before {
   display: flex;
   flex-direction: column;
   width: 35vw;
-  height: 100%;
+  height: 70%;
 }
 .portal-wrapper {
   &:hover {
@@ -257,6 +257,11 @@ body::before {
   justify-content: center;
   animation: slideAndFadeDown 1s ease-in-out 0s 1 forwards;
 }
+.header-description {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 @keyframes slideAndFadeDown {
   0% {
     opacity: 0;
@@ -321,7 +326,6 @@ body::before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
   overflow: scroll;
 }
 .archive-button {
