--- a/src/App.scss
+++ b/src/App.scss
@@ -117,18 +117,21 @@ body::before {
 .portal-wrapper {
   &:hover {
     cursor: pointer;
-    transform: scale(1.2);
-    transition: transform 0.3s ease-in-out;
+    // transform: scale(1.2);
+    // transition: transform 0.3s ease-in-out;
   }
   position: relative;
-  top: 13vh;
-  left: 7.5vw;
+  // Keep portal and socials aligned at various screen sizes
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-left: -38px; // Center portal inside socials
 }
 .portal {
   position: absolute;
+  // Keep portal and socials aligned at various screen sizes
   top: 50%;
   left: 50%;
-  transform-origin: center;
   transform: translate(var(--x, -50%), var(--y, -50%)) rotate(0deg);
   font-size: 10vmin;
   width: 1.2em;
@@ -176,13 +179,17 @@ body::before {
 }
 .portal-socials-sticky {
   position: sticky;
-  top: 60%;
+  top: 70%;
+  left: 90%;
   height: 100px;
+  width: 0;
 }
 .socials-container {
   position: absolute;
-  top: 0vh;
-  left: 19vw;
+  // Keep portal and socials aligned at various screen sizes
+  top: 50%;
+  left: 50%;
+  transform: translate(var(--x, -50%), var(--y, -50%));
   width: 200px;
   height: 200px;
   justify-content: space-around;
